tests/tests/failing_examples/attr_on_non_let.stderr
error: custom attribute panicked
 --> $DIR/attr_on_non_let.rs:3:1
  |
3 | #[hoist_temporaries]
  | ^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Failed to parse function marked with #[hoist_temporaries::hoist_temporaries]: After #[hoist_temporaries::hoist] attribute, expected a let statement but instead got `snack`
