tests/tests/failing_examples/attr_on_non_let.rs
use hoist_temporaries::hoist_temporaries;

#[hoist_temporaries]
pub fn f() {
    let mut snack;
    #[hoist_temporaries::hoist]
    snack = "blah";
    println!("{}", snack);
}

fn main() {}
